egonlang-core/res/examples/invalid/unexpected_eof.eg
123

// out: SyntaxError: unexpected end of file